styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    background-image: url('/images/header-background.jpg');
    position: relative;
    height: 800px;
    min-height: 500px;
    width: 100%;
    background-size: cover !important;
    -webkit-background-size: cover !important;
    overflow: hidden;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

